@@ -1,3 +1,8 @@
+Unreleased
+
+Changed
+    Used buttons instead of dropdown to change instance state
+
 0.9.3
 
 Added
